# sirula2

./: Cargo.toml
src/: app.rs  config.rs  history.rs  launcher_entry.rs  main.rs  model.rs  util.rs
