[package]
name = "sirula2"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "4.0.1"
fuzzy-matcher = "0.3.7"
gtk4 = { version = "0.4.7", features = ["v4_2"] }
itertools = "0.10.3"
once_cell = "1.10.0"
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"

[features]
